public/css/style.css
body {
	background: #c4bbaa;
	
	background: -moz-linear-gradient(top, #8d8065, #c3baa9 10%); /* for firefox 3.6+ */
	background: -webkit-linear-gradient(top, #8d8065, #c3baa9 10%); /* for webkit browsers */
	font-family: Lucida, Helvetica Neue;
    
	margin: 0px;
	padding: 0px;
	
	min-height: 600px;
}

a { 
	text-decoration: none; 
	color: #f0ece6; 
}
a:visited { color: #f0ece6; }
a:hover { color: #f0ece6; }
a:focus { outline: thin dotted; }

br {
    clear: left;
}

.container {
    text-align: center;
}

header { 
	background-color: #c4bbaa;
	text-align: center; 
}

header #logo {
	margin-top: 17px;
	margin-bottom: 10px;
}

.main {
	height: 500px;
	text-align: center;
	min-width: 1024px;
	
	background: #c4bbaa; /* for non-css3 browsers */
    background: -moz-linear-gradient(top, #c4bbaa, #e3dfd6); /* for firefox 3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, from(#c4bbaa), to(#e3dfd6)); /* for old webkit browsers */
    background: -webkit-linear-gradient(top, #c4bbaa, #e3dfd6); /* for new webkit browsers */
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#c4bbaa', endColorstr='#e3dfd6'); /* for IE */
}

nav#main_menu {
	position: absolute;
	text-align: center;
	font-size: 20px;
	height: 290px;
    width: 100%;
	background: url(../images/bg_tree.png);
	background-position: center;
	background-repeat: no-repeat;
	top: 390px;
	z-index: 0;
}

nav ul {
	list-style: none;
	margin-top: 190px;
}

nav li {
	display: inline;
	padding: 0px 10px 0px 0px;
	
}

footer {
	overflow: hidden;	
	font-size: 17px;
	text-align: center;
	background-color: #a7997e;
}

footer a {
	color: #f0ece6;
}

.rounded_corners {
    behavior: url(/css/border-radius.htc);
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    -khtml-border-radius: 15px;
    border-radius: 15px;
}

.box {
    border: 0px solid black;
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
    top: 180px;
    
    text-align: left;
    padding: 0px 20px 0px 20px;
    font-family: Lucida, Helvetica Neue;
    z-index: 1;
    background: rgba(255, 255, 255);
    background: rgba(255, 255, 255, 0.6);
    width:600px; 
    height:320px;
}

.box a {
    color: #cb2148;
    font-weight: 200;
}

.box h1 {
    font-style: normal;
    font-weight: 200;
    font-size: 30px;
    margin-bottom: 35px;
}

.box h2 {
    font-style: normal;
    font-weight: 200;
    font-size: 20px;
    margin-bottom: 5px;
    margin-top: 0px;
}

.box p {
    font-size: 18px;
    font-weight: 200;
}

.box form {
    font-size: 18px;
    font-weight: 300;
}

.box form label {
    display: block;
    width: 50px;
    float: left;
    margin: 5px 10px 10px 5px;
    text-align: right;
}

.box form .input_text {
    width: 505px;
}

.box form .input_textarea {
    width: 510px;
}

.box form .button {
    margin: 15px 0px 15px 0px;
    padding: 4px 5px 2px 5px;
    border: 1px solid gray;
    background-color: #403f39;
    color: white;
    font-size: 15px;
    
}

.content {
    top: 200px;
    text-align: justify;
    padding-top: 17px;
}

.main h1 {
    background-color: #85827b;
    height: 40px;
    width: 630px;
    position: absolute;
    z-index: 2;
    
    text-align: left;
    padding: 5px 0px 0px 20px;
    
    /* possiblo refectoring - merge with box */
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}

.main h1 img {
    margin: 0px;
}

#modules {
    margin-top: 10px;
}

#modules .mini-box div {
    border: 1px solid #ceccca;
    width: 187px;
    position: relative;
    display: block;
    float: left;
    background-color: #f8f6f2;
    
    /*behavior: url(/css/border-radius.htc);
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
    -khtml-border-radius: 15px;
    border-radius: 15px;*/
}

#modules .mini-box h2 {
    font-size: 19px;
    font-weight: 300;
    
    margin: 0px 0px 0px 0px;
    _background: #e7e4d9;
    background: #e4e1de;
    padding: 7px 0px 5px 6px;
}

#modules .mini-box h2 img {
    margin-top: -5px;
    margin-right: 5px;
}

.mini-box {
    margin-top: 7px;
}

#modules ul {
    list-style: none;
    padding-left: 13px;
    margin-top: 11px;
    
    font-size: 16px;
    text-align: left;
    font-weight: 300;
}

#modules ul li {
    margin-top: 9px;
}

.module_big {
    height: 289px;
}

.module_small {
    height: 136px;
}

.module_1 {
    margin: 0px 16px 0px 0px;
}

.module_2 {
    margin: 0px 16px 0px 0px;
}

.module_3 {
    margin: 15px 16px 0px 0px;
}

.module_4 {
    margin: -138px 0px 0px 0px;
}

#photos {
    height: 400px;
    top: 160px;
    text-align: center;
    background: none;
}

#photos .photo {
}

#photos img {
    border: 5px solid #504a49;
}

#photos .prev_and_next {
    margin-top: 8px;
}

#photos .prev_and_next a {
    font-weight: 400;
}

.photo_menu {
    position: absolute;
    margin-left: auto;
    margin-right: auto;
    left: 0px;
    right: 0px;
    
    top: 10px;
    height: 600px;
    width: 180px;    
}

.photo_menu_left {
    right: 830px;
}

.photo_menu_right {
    left: 830px;
}

.photo_menu nav {
    height: 500px;
}

.photo_menu a {
    text-decoration: none;
}

.photo_menu img {
    border: 5px solid #645e5d;
    margin: 0px 0px 5px 0px;
}

.photo_menu div {
    display: inline;
}   

#contact ul {
    list-style: none;
    padding-left: 5px;
    margin-top: 20px;
    font-size: 16px;
}

#contact ul li {
    margin-top: 10px;
}

#contact ul img {
    margin-right: 10px;
}

#contact .intro {
    margin-top: 27px;
}

#contact .general {
    margin-top: 27px;
    margin-left: 0px;
    font-size: 15px;
}

#contact .tel {
    font-size:14px;
    font-weight: 500;
}

